--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sleek",
+  "name": "blog",
   "version": "1.0.0",
-  "description": "Sleek is a modern Jekyll theme focused on speed performance & SEO best practices.",
+  "description": "Freetext.ai blog.",
   "main": "gulpfile.js",
   "dependencies": {
     "fg-loadcss": "^1.3.1",
@@ -46,13 +46,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dyutibarma/sleek.git"
+    "url": "git+https://github.com/freetext-ai/blog.git"
   },
   "keywords": [],
-  "author": "Jan Czizikow",
+  "author": "Dyuti Barma",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dyutibarma/sleek/issues"
+    "url": "https://github.com/freetext-ai/blog/issues"
   },
-  "homepage": "https://github.com/dyutibarma/sleek#readme"
+  "homepage": "https://github.com/freetext-ai/blog#readme"
 }
