--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ github_username:  freetext-ai # replace with your_github_username or comment to 
 # disqus:
 #   shortname: dyutibarma # to enable comments replace with your_disqus_shortname
 
+google_analytics: UA-115950847-1 # not required if using google_tag_manager
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
