--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "gulpfile.js",
   "dependencies": {
     "fg-loadcss": "^1.3.1",
+    "graceful-fs": "^4.2.4",
+    "gulp-cli": "^2.3.0",
     "jquery": "^3.2.1",
     "lazysizes": "^4.0.1",
     "normalize.css": "^7.0.0",
@@ -22,7 +24,7 @@
     "eslint-config-jquery": "^1.0.1",
     "eslint-plugin-dollar-sign": "^1.0.1",
     "eslint-plugin-jquery": "^1.3.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-gh-pages": "^0.5.4",
